# code-review-assistant

./: .env.example  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  train.yml
api/: index.py
backend/: config.py  database.py  db_models.py  main.py  requirements-lite.txt  requirements.txt  schemas.py
backend/middleware/: rate_limit.py
backend/routers/: auth.py
backend/services/: inference.py  reviewer.py  storage.py
backend/tests/: conftest.py  test_api.py  test_reviewer.py
e2e/: app.spec.ts
evaluation/: evaluate.py  requirements.txt
frontend/: index.html
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CodeInput.tsx  ReviewPanel.tsx
frontend/src/pages/: AdminPage.tsx
notebooks/: finetune_codereviewer_lora.ipynb
scripts/: prepare_data.py  requirements-train.txt  run_workflow.ps1  train.py  train_hf.py
