[project]
name = "code-review-assistant"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[tool.vercel]
entrypoint = "api.index:app"

[tool.vercel.scripts]
build = "cd frontend && npm ci && npm run build"
